--- a/todo_provider/pubspec.yaml
+++ b/todo_provider/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.5+1
+  provider:
 
 
   # The following adds the Cupertino Icons font to your application.
